--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "cloverx-cli": "./index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git@git.souche.com:liujianan/cloverx-cli.git"
