--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.souche.com:liujianan/cloverx-cli.git"
+    "url": "https://github.com/clover-x/cloverx-cli.git"
   },
   "keywords": [
     "cloverx",
