--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "co": "^4.6.0",
     "colors": "^1.1.2",
     "inquirer": "^2.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.15.0"
   }
 }
